// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Datetime reducer Should set the all day 1`] = `
Object {
  "allDay": true,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the all day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "June 25, 2018 4:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": true,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator date 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": " > ",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": " | ",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "June 5, 2018 5:00 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": false,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should toggle the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "July 19, 2018 8:00 pm",
  "multiDay": true,
  "start": "July 19, 2018 7:30 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;
